                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 03-02-2005 changed: delay when changing resolution in settings (easier resolution selection)
  - 03-02-2005 fixed: sometimes unreadable discs will be detected as audio cd's
  - 03-02-2005 fixed: [ 1095048 Part 2 ] Icon for folder displayed using XBE's icon (also fixed some stupidities).
  - 02-02-2005 updated: Italian language file (Thnx to kotix)
  - 02-02-2005 updated: German language file
  - 02-02-2005 updated: Finnish language file (Thnx to jutski)
  - 02-02-2005 updated: Norwegian language file (Thnx to vnmartinsen)
  - 02-02-2005 changed: removed libcdrip from project, libcdio replaces it
  - 02-02-2005 changed: cd ripper now uses libcdio for ripping
  - 02-02-2005 changed: cdda player is now based on libcdio 
  - 02-02-2005 updated: libcdio to version 0.72
  - 02-02-2005 added: Profile overwrite + context menu in profilewindow for overwrite/rename/delete.
  - 01-02-2005 added: mplayer support for new system\players directory structure, enable Alternate mplayer core in settings to use it.
                      Requires new compiled mplayer.dll, old dll's still needs to be in old mplayer dir.
  - 01-02-2005 fixed: [ 1113362 ] Selecting "All songs" in Artist view takes awfully long time
  - 01-02-2005 fixed: Slow music search
  - 01-02-2005 fixed: [ 1095048 ] If no DVD is in the drive, do not use cached thumbnail.
  - 01-02-2005 added: My Programs option to cache thumbnails.  HDDLoader users will want to turn this off.
  - 31-01-2005 fixed: Screenshot mem is freed correctly in overlays mode
  - 31-01-2005 fixed: Some defaults for movie viewing + "subs delay" message no longer shows on movie start.