@@ -692,6 +692,7 @@
   <string><id>13355</id><value>Pixel Shader</value></string>
   <string><id>13356</id><value>YUY2 Overlays</value></string>
   <string><id>13357</id><value>Combination Overlays/Shader</value></string>
+  <string><id>13358</id><value>High Quality Pixel Shader</value></string>
 
   <string><id>14000</id><value>Stacking: Off</value></string>
   <string><id>14001</id><value>Stacking: Simple</value></string>
