@@ -16,6 +16,7 @@ using namespace std;
 #define RENDER_PIXEL_SHADER				0
 #define RENDER_OVERLAYS						1
 #define RENDER_COMBO							2
+#define RENDER_RGB_SHADER					3
 
 // Subtitle colours
 
