@@ -36,6 +36,7 @@
 #include "PixelShaderRenderer.h"
 #include "OverlayRenderer.h"
 #include "ComboRenderer.h"
+#include "RGBRenderer.h"
 
 static void video_flip_page(void);
 void video_uninit(void);
@@ -127,6 +128,10 @@ unsigned int CXBoxRenderManager::PreInit(const char *arg)
 			else if (g_guiSettings.GetInt("Filters.RenderMethod") == RENDER_COMBO)
 			{
 				m_pRenderer = new CComboRenderer(g_graphicsContext.Get3DDevice());
+			}
+			else if (g_guiSettings.GetInt("Filters.RenderMethod") == RENDER_RGB_SHADER)
+			{
+				m_pRenderer = new CRGBRenderer(g_graphicsContext.Get3DDevice());
 			}
 			else
 				m_pRenderer = new CPixelShaderRenderer(g_graphicsContext.Get3DDevice());
